# smart_gold_Analyzer

./: .gitignore  ANALISIS_DAN_FIX.md  DEPLOYMENT.md  README.md  guards_patch.py  macro_patched.py  smart_gold_analyzer  update.md
.github/workflows/: ci.yml
ai_bridge/: .env.example  README.md  pyproject.toml  requirements.txt
ai_bridge/app/: main.py
ai_bridge/app/api/: dashboard.py  webhook.py
ai_bridge/app/backtest/: README.md  prompt_eval.py  signals.py  simulator.py
ai_bridge/app/config/: settings.py
ai_bridge/app/context/: market_context.py
ai_bridge/app/engine/: decision_engine.py  prompts.py
ai_bridge/app/executor/: base.py  ctrader.py  ctrader_client.py  factory.py  mt5.py
ai_bridge/app/guards/: __init__.py  chain.py  guards.py
ai_bridge/app/llm/: minimax_client.py
ai_bridge/app/models/: schemas.py
ai_bridge/app/monitor/: __init__.py  heartbeat.py
ai_bridge/app/notifier/: telegram.py
ai_bridge/app/risk/: __init__.py  breakeven.py  position_sizer.py  stop_calculator.py  trade_plan.py
ai_bridge/app/storage/: signal_log.py
ai_bridge/app/ui/: app.js  index.html  style.css
ai_bridge/app/utils/: logging.py
ai_bridge/docker/: .dockerignore  Caddyfile  Dockerfile  docker-compose.yml  smartgold-ai-bridge.service
ai_bridge/scripts/: _offline_backtest_check.py  _offline_ctrader_validate.py  _offline_symbol_override.py  _offline_validate.py  backtest.py  curl_examples.sh  smoke_test.py
ai_bridge/tests/: test_minimax_client_mock.py
pinescript/: ALERT_PAYLOAD.md  smart_gold_analyzer_v2_ai.pine
