[project]
name = "smartgold-ai-bridge"
version = "0.1.0"
description = "LLM (MiniMax) decision bridge between TradingView SmartGold indicator and execution/notification channels"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [{ name = "SmartGold Analyzer" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
